fix: add gap above carousel 2

--- a/css/style_index.css
+++ b/css/style_index.css
@@ -346,7 +346,7 @@
   }
    */
 .carousel2{
-  margin-top: 5vh;
+  margin-top: 6vh;
   background-color: #d9dbdd;
   padding: 50px 0px;
 }
